# TrackMate-Lacss

./: .gitignore  LICENSE  README.md  ipc-technotes.md  pom.xml
.github/workflows/: imagej-release.yml  maven-publish.yml
biopb/image/: detection_request.proto  detection_response.proto  detection_settings.proto  image_data.proto  roi.proto
biopb/lacss/: bindata.proto  detection_response.proto  detection_settings.proto  image_data.proto  lacss.proto  roi.proto
lacss/: detection_request.proto  image_data.proto
ome/: dataset.proto  detector.proto  detector_setting.proto  experiment.proto  experimenter.proto  folder.proto  ome.proto  pixel.proto  plate.proto  project.proto  rights.proto  screen.proto
scripts/: Lacss_.py  gen.sh  lacss_.py  update_docs.sh
src/main/proto/: .gitignore  pyproject.toml
src/main/proto/biopb/image/: bindata.proto  rpc_object_detection.proto
src/main/proto/biopb/lacss/: detection_request.proto  roi.proto
src/main/proto/biopb/ome/: bindata.proto  detector.proto  experimenter_group.proto  filter_set.proto  lightpath.proto  manufacturer_spec.proto  metadata_ref.proto  microbeam_manipulation.proto  objective.proto  pixel.proto  reagent.proto  roi.proto
src/main/proto/docs/: biopb.image.html  biopb.ome.html  index.html  search.html
src/main/proto/lacss/: detection_response.proto  lacss.proto  roi.proto
src/main/proto/ome/: filter.proto  filter_set.proto  image.proto  instrument.proto  light_source.proto  metadata.proto  microbeam_manipulation.proto  microscope.proto  objective.proto  objective_setting.proto  project.proto  roi.proto
(+27 files in other folders)
